[tool.poetry]
name = "listinhabot"
version = "0.1.0"
description = "A simple Telegram bot to create shopping lists."
authors = ["Bruno Martins Crocomo <bruno.crocomo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
